--- a/todolist/package.json
+++ b/todolist/package.json
@@ -1,10 +1,10 @@
 {
   "name": "src",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +12,10 @@
   "devDependencies": {
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
+  },
+  "description": "",
+  "dependencies": {
+    "date-fns": "^3.4.0",
+    "eslint-config-wesbos": "^4.0.1"
   }
 }
